--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,9 @@ body {
 }
 
 @media print {
-    .no-print, .no-print *
-    {
+
+    .no-print,
+    .no-print * {
         display: none !important;
     }
 }
@@ -227,8 +228,10 @@ body {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
@@ -255,9 +258,9 @@ body {
 }
 
 @media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -270,7 +273,8 @@ body {
 
     * {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
+        color: #000 !important;
+        /* Black prints faster: h5bp.com/s */
         box-shadow: none !important;
         text-shadow: none !important;
     }
@@ -305,7 +309,8 @@ body {
     }
 
     thead {
-        display: table-header-group; /* h5bp.com/t */
+        display: table-header-group;
+        /* h5bp.com/t */
     }
 
     tr,
@@ -332,4 +337,16 @@ body {
     h3 {
         page-break-after: avoid;
     }
+}
+
+.marker-container {
+    display: inline-flex !important;
+    gap: 0.1cm;
+    align-items: center;
+    border: 0.5px solid #0000001f;
+    border-style: dashed;
+}
+
+.marker-container .id-label {
+    font-weight: 600;
 }
