--- a/css/pure-forms.css
+++ b/css/pure-forms.css
@@ -64,7 +64,8 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-form select:focus,
 .pure-form textarea:focus {
     outline: 0;
-    outline: thin dotted \9; /* IE6-9 */
+    outline: thin dotted \9;
+    /* IE6-9 */
     border-color: #129FEA;
 }
 
@@ -74,7 +75,8 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 */
 .pure-form input:not([type]):focus {
     outline: 0;
-    outline: thin dotted \9; /* IE6-9 */
+    outline: thin dotted \9;
+    /* IE6-9 */
     border-color: #129FEA;
 }
 
@@ -84,6 +86,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     outline: thin dotted #333;
     outline: 1px auto #129FEA;
 }
+
 .pure-form .pure-checkbox,
 .pure-form .pure-radio {
     margin: 0.5em 0;
@@ -120,11 +123,14 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     background-color: #eaeded;
     color: #cad2d3;
 }
+
 .pure-form input[readonly],
 .pure-form select[readonly],
 .pure-form textarea[readonly] {
-    background: #eee; /* menu hover bg color */
-    color: #777; /* menu text color */
+    background: #eee;
+    /* menu hover bg color */
+    color: #777;
+    /* menu text color */
     border-color: #ccc;
 }
 
@@ -134,31 +140,38 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     color: #b94a48;
     border-color: #ee5f5b;
 }
+
 .pure-form input:focus:invalid:focus,
 .pure-form textarea:focus:invalid:focus,
 .pure-form select:focus:invalid:focus {
     border-color: #e9322d;
 }
+
 .pure-form input[type="file"]:focus:invalid:focus,
 .pure-form input[type="radio"]:focus:invalid:focus,
 .pure-form input[type="checkbox"]:focus:invalid:focus {
     outline-color: #e9322d;
 }
+
 .pure-form select {
     border: 1px solid #ccc;
     background-color: white;
 }
+
 .pure-form select[multiple] {
     height: auto;
 }
+
 .pure-form label {
     margin: 0.5em 0 0.2em;
 }
+
 .pure-form fieldset {
     margin: 0;
     padding: 0.35em 0 0.75em;
     border: 0;
 }
+
 .pure-form legend {
     display: block;
     width: 100%;
@@ -197,6 +210,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     display: block;
     margin: 0.25em 0;
 }
+
 .pure-form-aligned input,
 .pure-form-aligned textarea,
 .pure-form-aligned select,
@@ -208,6 +222,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     *zoom: 1;
     vertical-align: middle;
 }
+
 .pure-form-aligned textarea {
     vertical-align: top;
 }
@@ -216,6 +231,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-form-aligned .pure-control-group {
     margin-bottom: 0.5em;
 }
+
 .pure-form-aligned .pure-control-group label {
     text-align: right;
     display: inline-block;
@@ -223,6 +239,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     width: 10em;
     margin: 0 1em 0 0;
 }
+
 .pure-form-aligned .pure-controls {
     margin: 1.5em 0 0 10em;
 }
@@ -238,6 +255,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-form .pure-group fieldset {
     margin-bottom: 10px;
 }
+
 .pure-form .pure-group input {
     display: block;
     padding: 10px;
@@ -246,17 +264,21 @@ since IE8 won't execute CSS that contains a CSS3 selector.
     position: relative;
     top: -1px;
 }
+
 .pure-form .pure-group input:focus {
     z-index: 2;
 }
+
 .pure-form .pure-group input:first-child {
     top: 1px;
     border-radius: 4px 4px 0 0;
 }
+
 .pure-form .pure-group input:last-child {
     top: -2px;
     border-radius: 0 0 4px 4px;
 }
+
 .pure-form .pure-group button {
     margin: 0.35em 0;
 }
@@ -264,15 +286,19 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-form .pure-input-1 {
     width: 100%;
 }
+
 .pure-form .pure-input-2-3 {
     width: 66%;
 }
+
 .pure-form .pure-input-1-2 {
     width: 50%;
 }
+
 .pure-form .pure-input-1-3 {
     width: 33%;
 }
+
 .pure-form .pure-input-1-4 {
     width: 25%;
 }
